# MetaMinimac2

./: CMakeLists.txt  README.md  install.sh  requirements.txt
src/: HaplotypeSet.cpp  HaplotypeSet.h  Main.cpp  MarkovModel.cpp  MarkovModel.h  MarkovParameters.h  MetaMinimac.cpp  MetaMinimac.h  Minimizer.h  MyVariables.h  simplex.h
